2002-02-26  Ian Lance Taylor  <ian@airs.com>

	* uuconf.h (struct uuconf_tcp_port): Add uuconf_iversion field.
	* unix/tcp.c (ftcp_set_hints): New static function.
	(ftcp_open): Use ftcp_set_hints.  Check version when falling back
	to IPv4 code.  Use IPV6_BINDV6ONLY option if it is defined.
	(ftcp_dial): Use ftcp_set_hints.  Check version when falling back
	to IPv4 code.
	* uuconf/tportc.c (asPtcp_cmds): Add "version".
	(_uuconf_iport_cmd): Initialize uuconf_iversion field.
	* uuconf/hport.c (uuconf_hdb_find_port): Initialize
	uuconf_iversion field.
	* uuconf/vsinfo.c (_uuconf_iv2_system_internal): Likewise.
	* uuchk.c (ikshow_port): Report TCP port version number.
	* uucp.texi (port File): Document new "version" command.

2002-02-24  Ian Lance Taylor  <ian@airs.com>

	* conn.c (fconn_lock): Add fuser parameter.  Change all callers.
	(fconn_open): Likewise.
	* conn.h (struct sconncmds): Add fuser parameter to pflock and
	pfopen.
	(fconn_lock, fconn_open): Update declarations.
	* cu.c (struct sconninfo): Add fdirect field.
	(main): Initialize sinfo.fdirect.
	* unix/pipe.c (fspipe_open): Add fuser parameter.
	* unix/serial.c (fsserial_lock, fsserial_open): Likewise.
	(fsstdin_open, fsmodem_open, fsdirect_open): Likewise.
	* unix/tcp.c (ftcp_open): Likewise.
	* unix/tli.c (ftli_open): Likewise.

	* uux.c: Include <sysexits.h> if available.  Define macros from
	<sysexits.h> if not defined.  Change all calls to exit to use EX_*
	macros.  Change all calls to fsysdep_exit to use exit.
	(main): Pass uxfatal rather than uxabort to ulog_fatal_fn.  Do it
	at the start of the function.
	(uxfatal): New static function.
	(uxabort): Add istat parameter.  Change all callers.
	* unix/splcmd.c (zsysdep_spool_commands): Add pftemp parameter.
	Change call callers.
	* system.h (zsysdep_spool_commands): Update declaration.
	* uucp.texi (uux Description): Document uux exit status.
	* uux.1: Likewise.

	* unix/walk.c (iswalk_dir): Mark qstat as unused.
